--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "gh-pages": "^2.2.0",
     "prettier": "^1.19.1",
-    "react-app-rewired": "^2.1.5"
+    "react-app-rewired": "^2.1.5",
+    "reactotron-react-js": "^3.3.7",
+    "reactotron-redux": "^3.1.2"
   },
   "eslintConfig": {
     "extends": "react-app"
